2008-05-29  Perry McFarlane  <perry_m@fastmail.fm>
* atari_sdl.c, cassette.c, input.c, memory.c, pbi_bb.c, pbi_proto80.c,
pbi_xld.c, pokeysnd.c, sio.c, statesav.c, ui.h, util.[ch], votrax.c:
made compilable with g++. Fixed some bugs, and a bugfix for pbi_xld.c,
other minor fixes.


2008-05-28  Perry McFarlane  <perry_m@fastmail.fm>
* DOC/USAGE, atari_sdl.c, configure.ac, pbi.c, pbi_proto80.c, pbi_proto80.h,
pbi_xld.c: added emulation of a prototype 80 column card for the Atari 1090
expansion box (SDL version).  Also fixed a problem with LoadImage in pbi_xld.c
* DOC/INSTALL: Improved documentation a bit, suggested use of SDL.
* input.[ch], pokey.c: record random_scanline_counter for event recording.


2008-05-27  Perry McFarlane  <perry_m@fastmail.fm>
* antic.c, atari_ntsc.h, cassette.c, gtia.c, joycfg.c, monitor.c,
mzpokeysnd.c, pbi.c, pokeysnd.c, screen.c, sio.c, votrax.c:
Some spelling in comments corrected.
* mzpokeysnd.c: fix warnings


2008-05-26  Perry McFarlane  <perry_m@fastmail.fm>
* antic.[ch], atari.[ch], atari_sdl.c, cartridge.h, cassette.c, cpu.h,
gtia.[ch], javanvm/atari_javanvm.c, mzpokeysnd.c, pbi_bb.c, pbi_mio.c, 
pbi_scsi.c, pbi_xld.[ch], pia.h, platform.h, pokey.h, rtime.[ch], sio.h,
statesav.c, ui.c, ui_basic.c, util.[ch], votrax.[ch]:
I compiled with:
CC = gcc -ansi -pedantic -Wall -Waggregate-return -Wmissing-declarations 
-Wmissing-prototypes -Wredundant-decls -Wstrict-prototypes -Winline 
and I found missing headers and lack of static in many places.
Black Box and MIO will now contiune with SCSI disabled if the disk image
is not found.
* Makefile.in, configure.ac, cpu.c, atari_vga.c, sound_dos.c, vga_gfx.c,
javanvm/atari_javanvm.c, rdevice.c, win32/atari_win32.c, win32/keyboard.h,
win32/main.h, win32/screen_win32.c:
Made windx, sdl, and javanvm compile with -ansi -pedantic. Fixed more
warnings. rdevice.c: removed // comments and warnings. Made improved
gcc warnings the default for windx, sdl, javanvm, and dosvga. cpu.c: